[project]
name = "XHS-Downloader"
version = "2.5.beta"
description = "小红书（XiaoHongShu、RedNote）链接提取/作品采集工具：提取账号发布、收藏、点赞、专辑作品链接；提取搜索结果作品、用户链接；采集小红书作品信息；提取小红书作品下载地址；下载小红书无水印作品文件"
authors = [
    { name = "JoeanAmier", email = "yonglelolu@foxmail.com" },
]
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "click>=8.1.8",
    "emoji>=2.14.1",
    "fastapi>=0.115.8",
    "httpx[socks]>=0.28.1",
    "lxml>=5.3.1",
    "pyperclip>=1.9.0",
    "pyyaml>=6.0.2",
    "rookiepy>=0.5.6",
    "textual>=1.0.0",
    "uvicorn>=0.34.0",
]

[project.urls]
Repository = "https://github.com/JoeanAmier/XHS-Downloader"

[tool.uv.pip]
index-url = "https://mirrors.ustc.edu.cn/pypi/simple"
